remove test image - need to change properties for images to load properly - fixed, make main screen functionality working and also make Start Button working so it redirects to the game screen, also updated names fields in the game screen so it will pass names correctly

--- a/Trivia_Master_Challenge_Test_Your_Knowledge!.csproj
+++ b/Trivia_Master_Challenge_Test_Your_Knowledge!.csproj
@@ -9,4 +9,16 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="images\game_screen.jpeg" />
+    <None Remove="images\main_screen.jpeg" />
+    <None Remove="images\winner_screen.jpeg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="images\game_screen.jpeg" />
+    <Resource Include="images\main_screen.jpeg" />
+    <Resource Include="images\winner_screen.jpeg" />
+  </ItemGroup>
+
 </Project>
