Add the database, add testing Window!.xaml screen to load data from database

--- a/Trivia_Master_Challenge_Test_Your_Knowledge!.csproj
+++ b/Trivia_Master_Challenge_Test_Your_Knowledge!.csproj
@@ -21,4 +21,8 @@
     <Resource Include="images\winner_screen.jpeg" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+  </ItemGroup>
+
 </Project>
